infra/k8s/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-serv
  labels:
    name: ingress-serv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
  - host: exai.dev
    http:
      paths:
      - pathType: Prefix
        path: /imagetotext
        backend:
          service:
            name: ocrengine-service
            port: 
              number: 3000
      - pathType: ImplementationSpecific
        path: /upload/?(.*)
        backend:
          service:
            name: ocrengine-service
            port: 
              number: 3000
      - pathType: ImplementationSpecific
        path: /workspaces/?(.*)
        backend:
          service:
            name: workspaces-service
            port: 
              number: 3001
      - pathType: ImplementationSpecific
        path: /entities/?(.*)
        backend:
          service:
            name: entities-service
            port: 
              number: 3002
      - pathType: Prefix
        path: /
        backend:
          service:
            name: client-service
            port: 
              number: 4200
